# AI-RoadDamageClassification

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebook/: 94.00_notebook_eff_net_b3.ipynb  95.20_notebook_eff_net_b0.ipynb  95.20_notebook_mobilenet.ipynb  95.44_notebook.ipynb  97.14_notebook.ipynb  97.36_notebook.ipynb  check.py  convert.py  models_factory.py  prepocessing.ipynb
notebook/utils/: eval.py  load.py
